--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,8 @@ dependencies = [
   "setuptools",
   "huggingface-hub",
   "transformers",
+  "xprof-nightly",
+  "pillow>=11.3.0",
   "xprof",
 ]
 
