Initial implementation of VGG 19 (#23)
* enhancement: change K_MASK to _K_MASK for avoiding future accidental imports (#14)

Co-authored-by: Jen Ha <25069493+jenriver@users.noreply.github.com>

* Initial implementation of VGG 19

* Code review reflection

* Update VGG-19 model path to jax-ml repository

* Update pyproject.toml

update branch and file

---------

Co-authored-by: Hoang NT <hoangnt.titech@gmail.com>
Co-authored-by: Jen Ha <25069493+jenriver@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,14 +37,11 @@ resnet50 = []
 sam2 = [
   "pillow>=11.3.0",
 ]
-testing = [
-    "torch",
+vgg19 = [
+  "h5py",
 ]
-
-all = [
-  "jax-bonsai[qwen3]",
-  "jax-bonsai[resnet50]",
-  "jax-bonsai[sam2]",
+testing = [
+  "torch",
 ]
 
 [project.urls]
