--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,9 +8,12 @@
 # 'pre-commit run --all'
 
 repos:
-  - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.4.0 # Use the latest stable version of Ruff
-    hooks:
-      - id: ruff # Runs the linter
-        args: [--fix] # Optional: automatically fix linting issues
-      - id: ruff-format # Runs the formatter
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  # Ruff version.
+  rev: v0.14.1
+  hooks:
+    # Run the linter.
+    - id: ruff-check
+      args: [ --fix ]
+    # Run the formatter.
+    - id: ruff-format
