--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ classifiers = [
   "Topic :: Scientific/Engineering :: Artificial Intelligence",
 ]
 dependencies = [
-  "jax[tpu]",
+  "jax",
   "jaxlib",
   "jaxtyping",
   "flax >= 0.12.0",
@@ -27,7 +27,6 @@ dependencies = [
   "setuptools",
   "huggingface-hub",
   "transformers",  # for the tokenizer and checkpoint
-  "xprof-nightly",
   "xprof",
 ]
 
@@ -42,6 +41,9 @@ vgg19 = [
 ]
 densenet121 = [
   "h5py",
+]
+whisper = [
+  "librosa"
 ]
 testing = [
   "torch",
