Add continuous testing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,13 +28,13 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-densenet121 = ["h5py"]
+densenet121 = ["h5py", "keras_hub", "tensorflow"]
 efficientnet = ["timm"]
 whisper = ["librosa"]
 qwen3 = []
 resnet50 = []
 sam2 = ["pillow>=11.3.0"]
-vgg19 = ["h5py"]
+vgg19 = ["h5py", "keras_hub", "tensorflow"]
 
 dev = [
   "xprof",
@@ -45,8 +45,6 @@ testing = [
   "pytest",
   "pytest-xdist",
   "torch",
-  "keras_hub",
-  "tensorflow",
   "timm",
 ]
 
