--- a/bonsai.sky.yml
+++ b/bonsai.sky.yml
@@ -17,4 +17,4 @@ run: |
   uv pip install -r requirements.txt
   cd bonsai/models/wan2/tests
   hf download Wan-AI/Wan2.1-T2V-1.3B --local-dir ./Wan2.1-T2V-1.3B
-  python bonsai/models/wan2/tests/test_outputs.py
+  python test_outputs.py
