--- a/bonsai.sky.yml
+++ b/bonsai.sky.yml
@@ -16,4 +16,4 @@ run: |
   uv pip install -e .
   uv pip install -r requirements.txt
   cd bonsai/models/wan2/tests
-  python test_outputs.py
+  python test_t5_output.py
