--- a/requirements.txt
+++ b/requirements.txt
@@ -52,6 +52,7 @@ markdown-it-py==4.0.0
 markupsafe==3.0.3
 mdurl==0.1.2
 ml-dtypes==0.5.4
+modelscope==1.32.0
 mpmath==1.3.0
 msgpack==1.1.2
 multidict==6.7.0
