--- a/bonsai.sky.yml
+++ b/bonsai.sky.yml
@@ -17,3 +17,9 @@ run: |
   uv pip install -r requirements.txt
   cd bonsai/models/wan2/tests
   python test_vae_output.py
+
+# cd sky_workdir/bonsai
+# source .venv/bin/activate
+# cd bonsai/models/wan2/tests
+# python test_vae_output.py
+
