--- a/bonsai.sky.yml
+++ b/bonsai.sky.yml
@@ -19,6 +19,7 @@ run: |
   python test_vae_output.py
 
 # cd sky_workdir/bonsai
+# git pull origin test-wan
 # source .venv/bin/activate
 # cd bonsai/models/wan2/tests
 # python test_vae_output.py
