--- a/bonsai.sky.yml
+++ b/bonsai.sky.yml
@@ -16,7 +16,7 @@ run: |
   uv pip install -e .
   uv pip install -r requirements.txt
   cd bonsai/models/wan2/tests
-  python test_vae_output.py
+  python test_vae_output.py hf
 
 # cd sky_workdir/bonsai
 # git pull origin test-wan
