--- a/bonsai.sky.yml
+++ b/bonsai.sky.yml
@@ -18,9 +18,10 @@ run: |
   cd bonsai/models/wan2/tests
   python test_vae_output.py hf
 
-# cd sky_workdir/bonsai
-# git pull origin test-wan
-# source .venv/bin/activate
-# cd bonsai/models/wan2/tests
-# python test_vae_output.py
+cd sky_workdir/bonsai
+git fetch origin
+git checkout origin/feat/wan-denoise
+source .venv/bin/activate
+cd bonsai/models/wan2/tests
+python test_vae_output.py
 
