--- a/bonsai.sky.yml
+++ b/bonsai.sky.yml
@@ -16,12 +16,12 @@ run: |
   uv pip install -e .
   uv pip install -r requirements.txt
   cd bonsai/models/wan2/tests
-  python test_vae_output.py hf
+  python test_dit_output.py
 
-cd sky_workdir/bonsai
-git fetch origin
-git checkout origin/feat/wan-denoise
-source .venv/bin/activate
-cd bonsai/models/wan2/tests
-python test_vae_output.py
+# cd sky_workdir/bonsai
+# git fetch origin
+# git checkout origin/feat/wan-denoise
+# source .venv/bin/activate
+# cd bonsai/models/wan2/tests
+# python test_vae_output.py
 
