--- a/bonsai.sky.yml
+++ b/bonsai.sky.yml
@@ -20,9 +20,7 @@ run: |
   python run_model.py
 
 # cd sky_workdir/bonsai
-# git fetch origin
-# git checkout origin/feat/wan-denoise
 # source .venv/bin/activate
 # cd bonsai/models/wan2/tests
-# python test_vae_output.py
+# python run_model.py
 
