--- a/bonsai.sky.yml
+++ b/bonsai.sky.yml
@@ -17,7 +17,7 @@ run: |
   uv pip install -e .
   uv pip install -r requirements.txt
   cd bonsai/models/wan2/tests
-  python run_model.py
+  python test_vae_output.py
 
 # cd sky_workdir/bonsai
 # source .venv/bin/activate
