--- a/bonsai.sky.yml
+++ b/bonsai.sky.yml
@@ -17,9 +17,9 @@ run: |
   uv pip install -e .
   uv pip install -r requirements.txt
   cd bonsai/models/wan2/tests
-  python test_vae_output.py
+  python run_model.py
 
-cd sky_workdir/bonsai
-source .venv/bin/activate
-cd bonsai/models/wan2/tests
-python run_model.py
+# cd sky_workdir/bonsai
+# source .venv/bin/activate
+# cd bonsai/models/wan2/tests
+# python run_model.py
