--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,13 +18,13 @@ classifiers = [
   "Topic :: Scientific/Engineering :: Artificial Intelligence",
 ]
 dependencies = [
-  "jax",
-  "jaxlib",
+  "jax >= 0.8.0, < 0.9.0",
+  "jaxlib >= 0.8.0, < 0.9.0",
+  "flax >= 0.12.0, < 0.13.0",
   "jaxtyping",
-  "flax >= 0.12.0",
   "jinja2",
   "huggingface-hub",
-  "transformers",  # for the tokenizer and checkpoint
+  "transformers",
 ]
 
 [project.optional-dependencies]
