--- a/pyproject.toml
+++ b/pyproject.toml
@@ -93,3 +93,9 @@ ignore = [
 [tool.ruff.format]
 quote-style = "double"
 indent-style = "space"
+
+
+[tool.pytest.ini_options]
+testpaths = ["bonsai"]
+python_files = ["test_*.py"]
+python_functions = ["test_*"]
