--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,11 +21,13 @@ classifiers = [
 dependencies = [
   "jax >= 0.8.0, < 0.9.0",
   "jaxlib >= 0.8.0, < 0.9.0",
-  "flax >= 0.12.0, < 0.13.0",
+  # Set flax from source as long as bonsai has no stable release
+  # "flax >= 0.12.0, < 0.13.0",
+  "flax @ git+https://github.com/google/flax.git",
   "jaxtyping>=0.2.20",
   "jinja2>=3.0.0",
   "huggingface-hub>=0.20.0",
-  "transformers>=4.30.0",
+  "transformers >= 4.30.0, < 5.0.0",
 ]
 
 [project.optional-dependencies]
